<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".QuizActivity"
    android:orientation="vertical"
    android:background="@drawable/background_gradient">
    <!-- This activity is similar to the activity_quiz, but it has checkBoxes instead of radioButtons
        -->
    <Space
        android:layout_width="match_parent"
        android:layout_height="25dp"/>
    <TextView
        android:textSize="15sp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/answer_all_questions_correctly"
        android:fontFamily="@font/title_font"
        android:layout_gravity="center" />
    <Space
        android:layout_width="match_parent"
        android:layout_height="15dp"/>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:background="@drawable/question_bubble"
        android:orientation="vertical">
        <TextView
            android:textSize="18sp"
            android:fontFamily="@font/title_font"
            android:layout_width="200dp"
            android:id="@+id/questionBubble"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/no_questions_available"
            android:layout_marginTop="25dp"/>
    </LinearLayout>

            <CheckBox

                android:layout_gravity="center_horizontal"
                android:id="@+id/checkBubble1"
                android:layout_width="240dp"
                android:layout_height="wrap_content"
                android:background="@drawable/answer_bubble"
                android:text="@string/no_answer_available"/>

            <CheckBox
                android:layout_gravity="center_horizontal"
                android:id="@+id/checkBubble2"
                android:layout_width="240dp"
                android:layout_height="wrap_content"
                android:background="@drawable/answer_bubble"
                android:text="@string/no_answer_available"/>

            <CheckBox
                android:layout_gravity="center_horizontal"
                android:id="@+id/checkBubble3"
                android:layout_width="240dp"
                android:layout_height="wrap_content"
                android:background="@drawable/answer_bubble"
                android:text="@string/no_answer_available"/>

            <CheckBox
                android:layout_gravity="center_horizontal"
                android:id="@+id/checkBubble4"
                android:layout_width="240dp"
                android:layout_height="wrap_content"
                android:background="@drawable/answer_bubble"
                android:text="@string/no_answer_available"/>

    <Button
        android:id="@+id/MAselectAnswer"
        android:layout_width="150dp"
        android:layout_height="35dp"
        android:layout_gravity="center_horizontal"
        android:background="@color/ButtonColor"
        android:onClick="selectAnswerMA"
        android:text="@string/continueButton"
        tools:ignore="OnClick" />


</LinearLayout>